--- a/express/code/blocks/print-product-detail/print-product-detail.css
+++ b/express/code/blocks/print-product-detail/print-product-detail.css
@@ -274,17 +274,17 @@
       overflow: visible;
     }
     .simple-carousel-arrow:hover {
-      background: #d5d5d5;
+      background: var(--color-gray-325);
       box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 6px 0px rgba(0, 0, 0, 0.04), 0px 4px 12px 0px rgba(0, 0, 0, 0.08);
     }
     .simple-carousel-arrow:active {
-      background: #b1b1b1;
+      background: var(--color-gray-350-variant);
     }
     .simple-carousel-arrow:focus {
       outline: none;
     }
     .simple-carousel-arrow:focus-visible {
-      outline: 2px solid #4b75ff;
+      outline: 2px solid var(--color-background-accent-default);
       outline-offset: -4px;
       border-radius: 100px;
     }
@@ -758,17 +758,17 @@ main .section .pdpx-drawer-description {
       overflow: visible;
     }
     .simple-carousel-arrow:hover {
-      background: #d5d5d5;
+      background: var(--color-gray-325);
       box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 6px 0px rgba(0, 0, 0, 0.04), 0px 4px 12px 0px rgba(0, 0, 0, 0.08);
     }
     .simple-carousel-arrow:active {
-      background: #b1b1b1;
+      background: var(--color-gray-350-variant);
     }
     .simple-carousel-arrow:focus {
       outline: none;
     }
     .simple-carousel-arrow:focus-visible {
-      outline: 2px solid #4b75ff;
+      outline: 2px solid var(--color-background-accent-default);
       outline-offset: -4px;
       border-radius: 100px;
     }
