--- a/express/code/styles/styles.css
+++ b/express/code/styles/styles.css
@@ -16,10 +16,11 @@
   --color-gray-300: #d4d4d4;
   --color-gray-300-variant: #dadada;
   --color-gray-325: #D5D5D5;
+  --color-gray-350: #9e9e9e;
+  --color-gray-350-variant: #b1b1b1;
   --color-gray-400: #b6b6b6;
   --color-gray-400-variant: #C6C6C6;
   --color-gray-500: #909090;
-  --color-gray-350: #9e9e9e;
   --color-gray-600: #686868;
   --text-color-secondary: #6e6e6e;
   --color-gray-700: #444;
